--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-project(Philosophers++ VERSION 1.0 LANGUAGES CXX)
+project(Philos2.0 VERSION 1.0 LANGUAGES CXX)
 
 set(SRC main.cpp OptionsParser.cpp )
 
